# cloudfspy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
docs/: 404.html  index.html
docs/search/: search_index.json
docs/tutorials/getting_started/: index.html
examples/: main.py
mkdocs/: index.md
mkdocs/tutorials/: getting_started.ipynb  getting_started.md  getting_started.py
scripts/: docs2.sh
src/cloudfspy/: __init__.py  any_path.py  cloud_path.py  exceptions.py  generic_path.py  local_path.py  settings.py  utils.py
src/cloudfspy/decor/: __init__.py  exception_decor.py  type_assert_decor.py
src/cloudfspy/decorators/: __init__.py  exception_decor.py  type_assert_decor.py
src/cloudfspy/vendors/: __init__.py
src/cloudfspy/vendors/azure/: __init__.py  az_cloud_path.py
src/cloudfspy/vendors/gcp/: __init__.py  gcp_cloud_path.py
